--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -158,12 +158,15 @@
     <Content Include="Themes\Images\document-print.png" />
     <Content Include="Themes\Images\ExcelIcon.png" />
     <Content Include="Themes\Images\excel_icon.png" />
+    <Content Include="Themes\Images\k.png" />
     <Content Include="Themes\Images\logoKraus.png" />
     <Content Include="Themes\Images\main-bg.jpg" />
     <Content Include="Themes\Images\Search.png" />
     <Content Include="Themes\Images\UserIcon.png" />
     <Content Include="Themes\CSS\BlackCoffeeCSS.css" />
     <Content Include="Themes\CSS\ddsmoothmenu.css" />
+    <Content Include="Themes\Images\water9 %281%29.jpg" />
+    <Content Include="Themes\Images\water9.jpg" />
     <Content Include="Themes\js\highcharts.js" />
     <Content Include="Themes\js\jquery-1.5.1.min.js" />
     <Content Include="Themes\js\jquery.min.js" />
