--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -130,6 +130,7 @@
     <Content Include="Forms\Web Forms\frmChart.aspx" />
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
+    <Content Include="Forms\Web Forms\frmNewRMANumber.aspx" />
     <Content Include="Forms\Web Forms\frmPopup.aspx" />
     <Content Include="Forms\Web Forms\frmPopupForEditRMAReasons.aspx" />
     <Content Include="Forms\Web Forms\frmRetunDetail.aspx" />
@@ -137,9 +138,11 @@
     <Content Include="Forms\Web Forms\frmRMAConfig.aspx" />
     <Content Include="Forms\Web Forms\frmRMAEnter.aspx" />
     <Content Include="Forms\Web Forms\frmRMAFormPrint2.aspx" />
+    <Content Include="Forms\Web Forms\frmRMAPopup.aspx" />
     <Content Include="Forms\Web Forms\frmRoles.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentInfoDetails.aspx" />
     <Content Include="Forms\Web Forms\frmShippingInfo.aspx" />
+    <Content Include="Forms\Web Forms\frmSRNumber.aspx" />
     <Content Include="Forms\Web Forms\frmStationDashBoard.aspx" />
     <Content Include="Forms\Web Forms\frmStations.aspx" />
     <Content Include="Forms\Web Forms\frmTrackShipment.aspx" />
@@ -205,6 +208,13 @@
     <Compile Include="Forms\Web Forms\DemoSearch.aspx.designer.cs">
       <DependentUpon>DemoSearch.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Web Forms\frmNewRMANumber.aspx.cs">
+      <DependentUpon>frmNewRMANumber.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmNewRMANumber.aspx.designer.cs">
+      <DependentUpon>frmNewRMANumber.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Web Forms\frmPopup.aspx.cs">
       <DependentUpon>frmPopup.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -254,12 +264,26 @@
     <Compile Include="Forms\Web Forms\frmRMAFormPrint2.aspx.designer.cs">
       <DependentUpon>frmRMAFormPrint2.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Web Forms\frmRMAPopup.aspx.cs">
+      <DependentUpon>frmRMAPopup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRMAPopup.aspx.designer.cs">
+      <DependentUpon>frmRMAPopup.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Web Forms\frmRoles.aspx.cs">
       <DependentUpon>frmRoles.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Forms\Web Forms\frmRoles.aspx.designer.cs">
       <DependentUpon>frmRoles.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmSRNumber.aspx.cs">
+      <DependentUpon>frmSRNumber.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmSRNumber.aspx.designer.cs">
+      <DependentUpon>frmSRNumber.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\ImageServer.aspx.cs">
       <DependentUpon>ImageServer.aspx</DependentUpon>
