--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -11,6 +11,7 @@
     <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false" />
   </configSections>
   <system.web>
+    <sessionState mode="InProc" timeout="1440"></sessionState>
     <pages enableSessionState="true">
       <controls>
         <add assembly="Ext.Net" namespace="Ext.Net" tagPrefix="ext" />
